--- a/Movies/Pages/Index.cshtml
+++ b/Movies/Pages/Index.cshtml
@@ -4,33 +4,72 @@
     ViewData["Title"] = "Home page";
 }
 
-<h1>Movies</h1>
+<form id="movie-database">
 
-<ul class="movie-list">
-    @foreach (Movie movie in MovieDatabase.All)
-    {
+    <div id="search">
+        <input type="text" name="SearchTerms" value="@Model.SearchTerms" />
+        <input type="submit" value="Search">
+    </div>
 
-        <li>
-            <div class="details">
-                <h3 class="title">@movie.Title</h3>
-                <div class="mpaa">@movie.MPAARating</div>
-                <div class="genre">@movie.MajorGenre</div>
-            </div>
-            <div class="ratings">
+    <div id="filters">
 
-                @if(movie.IMDBRating != null)
-                {
-                    <div class="imdb">
-                        @movie.IMDBRating
+        <h4>MPAA Rating</h4>
+        @foreach (String rating in MovieDatabase.MPAARatings)
+        {
+            <label>
+                <input type="checkbox" name="MPAARatings" value="@rating" checked="@Model.MPAARatings.Contains(rating)" />
+                @rating
+            </label>
+        }
+
+        <h4>Genre</h4>
+        @foreach (String genre in MovieDatabase.Genres)
+        {
+            <label>
+                <input type="checkbox" name="Genres" value="@genre" />
+                @genre
+            </label>
+        }
+
+        <h4>IMDB Rating</h4>
+        <div>
+            Between
+            <input name="IMDBMin" type="number" min="0" max="10" step="0.1" placeholder="min" />
+            and
+            <input name="IMDBMax" type="number" min="0" max="10" step="0.1" placeholder="min" />
+        </div>
+
+    </div>
+
+    <div id="results">
+        <h1>Movie Results</h1>
+
+        <ul class="movie-list">
+            @foreach (Movie movie in @Model.Movies)
+            {
+                <li>
+                    <div class="details">
+                        <h3 class="title">@movie.Title</h3>
+                        <div class="mpaa">@movie.MPAARating</div>
+                        <div class="genre">@movie.MajorGenre</div>
                     </div>
-                }
-                @if(movie.RottenTomatoesRating != null)
-                {
-                    <div>
-                        @movie.RottenTomatoesRating
+                    <div class="ratings">
+                        @if (movie.IMDBRating != null)
+                        {
+                            <div class="imdb">
+                                @movie.IMDBRating
+                            </div>
+                        }
+                        @if (movie.RottenTomatoesRating != null)
+                        {
+                            <div class="rotten-tomatoes">
+                                @movie.RottenTomatoesRating
+                            </div>
+                        }
                     </div>
-                }
-            </div>
-        </li>
-    }
-</ul>
+                </li>
+            }
+        </ul>
+    </div>
+
+</form>
